--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>3쿠션 당구 연습 노트</title>
     <!-- Tailwind CSS CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="apple-touch-icon" href="3cu-app.png">
+    <link rel="icon" type="image/png" href="3cu-app.png">
     <style>
         /* 기본 스타일 */
         * {
